# vqwMove_ws

./: .clang-format  .gitignore  Notes.txt  chrony.conf  myBuild.bash  myKeyboard.bash  myKeyboard_cmd_vel.bash  myKeyboard_cmd_vel_teleop.bash  myPkgCreate.bash  myServoCmd.bash  myStart.bash  myStart_SLAM.bash  node_topic_list_2025-03-01_13-56.txt  vqwMove_ws.code-workspace
src/bno086_cli_interface/: CMakeLists.txt  package.xml
src/bno086_cli_interface/msg/: Bno086CmdText.msg
src/bno086_cli_interface/srv/: Bno086Cli.srv
src/bno086_hardware_interface/: CMakeLists.txt  bno086_hardware_interface.xml  package.xml
src/bno086_hardware_interface/include/bno086_hardware_interface/: BNO08x.hpp  Bno086HardwareInterface.hpp  Channel_ROS_msg.h  MyIMU.hpp  SPI.hpp  Test_BNO086.hpp  bno086_cli_service.hpp  elapsedMillis.h  gpio.hpp  sh2.h  sh2_err.h  sh2_hal.h  sh2_util.h  visibility_control.h  vqwMsgCallbackHolder.h  vqwPipe.h  vqwPipe_Chan_Mgt_Msg.h  vqwPipe_Channel.h  vqwPipe_Driver_Linux.hpp  vqwSerializer.h
src/bno086_hardware_interface/src/: BNO08x.cpp  Bno086HardwareInterface.cpp  MyIMU.cpp  SPI.cpp  Test_BNO086.cpp  bno086_cli_service.cpp  bno086_test_class_loader.cpp  elapsedMillis.cpp  sh2.c  sh2_SensorValue.c  shtp.c  vqwPipe.cpp  vqwPipe_Driver_Linux.cpp
src/bno08x_hardware_interface/: CMakeLists.txt  bno08x_hardware_interface.xml  package.xml
src/bno08x_hardware_interface/include/bno08x_hardware_interface/: Bno08xHardwareInterface.hpp  CRC8.h  Channel_ROS_msg.hpp  OneLineBuffer.hpp  visibility_control.h  vqwMsgCallbackHolder.hpp  vqwPipe.hpp  vqwPipe_Chan_Mgt_Msg.hpp  vqwPipe_Channel.hpp  vqwPipe_Driver_Linux.hpp  vqwPipe_struct.hpp  vqwSerializer.hpp
src/bno08x_hardware_interface/src/: Bno08xHardwareInterface.cpp  CRC8.c  bno08x_Test.cpp  vqwPipe.cpp  vqwPipe_Channel.cpp  vqwPipe_Driver_Linux.cpp
src/cam_pan_tilt_hardware_interface/: CMakeLists.txt  cam_pan_tilt_hardware_interface.xml  package.xml
src/cam_pan_tilt_hardware_interface/include/cam_pan_tilt_hardware_interface/: cam_pan_tilt_hardware_interface.hpp  i2c_controller.hpp  pwm_servo_driver.hpp  visibility_control.h
src/cam_pan_tilt_hardware_interface/src/: Test_PWMServoDriver.cpp  cam_pan_tilt_hardware_interface.cpp  i2c_controller.cpp  pwm_servo_driver.cpp  vqw_servo_driver_component.cpp
src/description/: vqwbot_description.urdf
src/joy_pan_tilt/: CMakeLists.txt  package.xml
src/joy_pan_tilt/include/joy_pan_tilt/: joy_pan_tilt.hpp  visibility_control.h
src/joy_pan_tilt/src/: joy_pan_tilt.cpp
src/roboclaw_hardware_interface/: CMakeLists.txt  package.xml
src/roboclaw_hardware_interface/include/roboclaw_hardware_interface/: elapsedMillis.h  elapsedMillis.hpp  motor_joint.hpp  roboclaw_hardware_interface.hpp  roboclaw_unit.hpp
src/roboclaw_hardware_interface/src/: elapsedMillis.cpp  motor_joint.cpp  roboclaw_hardware_interface.cpp  roboclaw_unit.cpp
src/roboclaw_serial/: CMakeLists.txt  package.xml
src/roboclaw_serial/include/roboclaw_serial/: command.hpp  device.hpp  interface.hpp  serialized_buffer.hpp  value_distribution.hpp
src/sllidar_ros2/launch/: sllidar_s2_launch.py
src/vqw_package/: CMakeLists.txt  Controller_config.yaml  package.xml
src/vqw_package/launch/: vqwPackage.launch.py
src/vqw_package/src/: roboClawe_URDF.xacro  vqwNav_node.cpp  vqwNav_test_roboclaw.cpp
src/vqw_util/: CMakeLists.txt  package.xml
src/vqw_util/include/vqw_util/: elapsedMillis.hpp  value_distribution.hpp  visibility_control.h  vqw_util.hpp
src/vqw_util/src/: elapsedMillis.cpp  vqw_util.cpp
src/vqwbot_bringup/: CMakeLists.txt  nav2_params.temp.yaml  package.xml
src/vqwbot_bringup/launch/: bno08x.launch.py  full.launch.py  fuse.launch.py  joy.launch.py  joy_pan_tilt.launch.py  minimal.launch.py  nav2.launch.py  rviz.launch.py  slam_toolbox.launch.py  test.launch.py
src/vqwbot_bringup/params/: bno08x_controllers.yaml  combined_controllers.yaml  fuse_params.yaml  joy_params.yaml  nav2_params.yaml  roboclaw_controllers.yaml  slam_toolbox_params.yaml  urdf_config.rviz
src/vqwbot_bringup/urdf/: argus_camera.urdf.xacro  bno086.ros2_control.xacro  bno08x.ros2_control.xacro  cam_pan_tilt_ros2_control.xacro  camera.urdf.xacro  roboclaw.ros2_control.xacro  servo_ros2_control.xacro  vqwbot.inertia.xacro  vqwbot.materials.xacro  vqwbot.urdf.xacro  vqwbot_bno08x.urdf.xacro  vqwbot_description.urdf.xacro
